# elastic_plastic_piston_solver

./: .gitignore  README.md  elastoplastic_piston_solver.py  example_aluminum_piston.py  pyproject.toml
.cursor/commands/: generate-commit-message.md
examples/: energy_split_comparison.md  example_all_regimes.py  example_aluminum_piston.py  example_copper_validation.py  example_mode_comparison.py
research/: energy_split_work_integral_fix.md
research/Codex/: elastoplastic_piston_solver.py  summary.md
research/Codex/scripts/: branch_transition_sweep.md  example_aluminum_piston.py  example_branch_regression.py  example_branch_sweep.py  example_high_vp_mode_profile.py  example_mode_comparison.py  example_selected_three_wave_profiles.py  example_three_wave_ratio_maps.py  example_two_wave_zoom_map.py  selected_three_wave_cases.md
research/Opus/: summary.md
research/Opus/scripts/: diagnose_energy_split.py  elastoplastic_piston_solver.py  ig_mode_comparison.py  regime_map.py  regime_map_report.md
tests/: test_solver.py
